force-app/main/default/objects/CRMC_PP__Configured_Component__c/CRMC_PP__Configured_Component__c.object-meta.xml
<CustomObject>
    <description>Tracks information for Lightning Components and Lightning Web Components that are configured to be displayed in Grid Views</description>
    <label>Configured Component</label>
    <nameField>
        <label>Configured Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configured Components</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>