force-app/main/default/objects/CRMC_PP__Configured_Component__c/fields/CRMC_PP__Component_Type__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Component_Type__c</fullName>
    <description>Type of component (LWC or Lightning Component)</description>
    <label>Component Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>