force-app/main/default/objects/CRMC_PP__Configured_Component__c/fields/CRMC_PP__Enabled__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable and disable configured component.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>