force-app/main/default/objects/CRMC_PP__Configured_Component__c/fields/CRMC_PP__JSON__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__JSON__c</fullName>
    <description>JSON that records the data needed to create the LWC or Lightning Component</description>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>