force-app/main/default/objects/CRMC_PP__Configured_Component__c/fields/CRMC_PP__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMC_PP__Object_Name__c</fullName>
    <description>Object this component was configured for</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>